--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <button ion-button round block (click)="material()">Material</button>
+  <button ion-button round block (click)="submaterial()">Sub-Material</button>
+  <button ion-button round block (click)="menulist()">Menu-list</button>
+  <button ion-button round block (click)="detail()">Detail</button>
 </ion-content>
