--- a/src/pages/material/material.html
+++ b/src/pages/material/material.html
@@ -7,12 +7,20 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>material</ion-title>
+    <ion-title>เลือกวัตถุดิบหลัก</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list radio-group>
+    <ion-item *ngFor="let itm of materials">
+      <ion-label>{{itm}}</ion-label>
+      <ion-radio value="{{itm}}"></ion-radio>
+    </ion-item>
+  </ion-list>
 </ion-content>
+<ion-footer>
+  <button ion-button full block (click)="subMaterial()">ยืนยัน</button>
+</ion-footer>
