--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -7,12 +7,24 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>detail</ion-title>
+    <ion-title>{{ detail.name }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <img [src]="detail.image">
+  <ion-item-divider color="light" no-lines>รายละเอียด</ion-item-divider>
+  <ion-list>
+    <ion-item>
+      <p>{{ detail.detail }}</p>
+    </ion-item>
+  </ion-list>
+  <ion-item-divider color="light" no-lines>รายละเอียด</ion-item-divider>
+  <ion-list>
+    <ion-item *ngFor="let material of detail.material">
+      {{ material }}
+    </ion-item>
+  </ion-list>
 </ion-content>
