edit menulist ---> detail data

--- a/src/pages/menu-list/menu-list.html
+++ b/src/pages/menu-list/menu-list.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-item *ngFor="let item of menuList" (click)="detail(item)">
       <ion-thumbnail item-left>
       <img [src]="item.image">
