--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -15,19 +15,19 @@
 
 <ion-content>
   <img [src]="detail.image">
-  <ion-item-divider color="light" no-lines>รายละเอียด</ion-item-divider>
+  <ion-item-divider color="light" no-lines><b>รายละเอียด</b></ion-item-divider>
   <ion-list>
     <ion-item>
       <p>{{ detail.detail }}</p>
     </ion-item>
   </ion-list>
-  <ion-item-divider color="light" no-lines>วัตถุดิบ</ion-item-divider>
+  <ion-item-divider color="light" no-lines><b>วัตถุดิบ</b></ion-item-divider>
   <ion-list>
     <ion-item *ngFor="let material of detail.material">
       {{ material }}
     </ion-item>
   </ion-list>
-  <ion-item-divider color="light" no-lines>วิธีทำ</ion-item-divider>
+  <ion-item-divider color="light" no-lines><b>วิธีทำ</b></ion-item-divider>
   <ion-list>
     <ion-item *ngFor="let step of detail.step">
       {{ step }}
