--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -18,7 +18,7 @@
   <ion-item-divider color="light" no-lines><b>รายละเอียด</b></ion-item-divider>
   <ion-list>
     <ion-item>
-      <p>{{ detail.detail }}</p>
+      <p> &nbsp;&nbsp;&nbsp; {{ detail.detail }}</p>
     </ion-item>
   </ion-list>
   <ion-item-divider color="light" no-lines><b>วัตถุดิบ</b></ion-item-divider>
