--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button round block (click)="material()">Material</button>
+  <!-- <button ion-button round block (click)="material()">Material</button>
   <button ion-button round block (click)="submaterial()">Sub-Material</button>
   <button ion-button round block (click)="menulist()">Menu-list</button>
-  <button ion-button round block (click)="detail()">Detail</button>
+  <button ion-button round block (click)="detail()">Detail</button> -->
 </ion-content>
